--- a/style.css
+++ b/style.css
@@ -1,16 +1,33 @@
-#label_1{
-	color: black;
-	font-size: 40px;
-}
+.body_backgorund {
+    background-image: url("bg1.jpg");
+    background-position: center;
+    background-size: cover;
+  }
+  body{
+    cursor: pointer;
+  }
+  h1
+  {
+      color: red; 
+      font-size: 40px;
+  }
+  #myCanvas
+  {
+      border-width:10px;
+      background-color: white; 
+      border-style:ridge;
+  }
 
-.body_background{
-	background-image: url("bg1.jpg");
-	background-position: center;
-	background-size: cover;
-}
+  button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 42px;
+    font-size: 16px;
+  }
 
-#my_canvas{
-	border: width 200px; 
-	background-color: rgb(255, 255, 255);
-    border-style: ridge;
-}
+  input
+  {
+    margin-right: 20px;
+  }
+  
